# python-terraformvpsherevm

./: .gitignore  Makefile  README.md  cli.py  requirements.txt  setup.cfg  setup.py
terraformvspherevm/: TerraformVM.py  TerrascriptVSphereVM.py  __init__.py  terraformvm.py  terrascriptvspherevm.py
tests/: test_base.py
