[metadata]
name = terraformvspherevm
version = 0.0.16
author = Thomas Senay
author-email = tsenay.consulting@icloud.com
home-page = https://github.com/tsenay/python-{name}
description = {description}
long-description = file: README.rst, CHANGELOG.rst
license = MIT
license-file = LICENSE.txt
platform = any
keywords = terraform, vsphere
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules

[nosetests]
verbose=1
with-coverage=1
cover-package=terraformvspherevm
debug=nose.loader
pdb=1
failed=1
pdb-failures=1
no-byte-compile=1
stop=1
logging-level=INFO
detailed-errors=1
cover-html=1


[options]
zip_safe = false
include_package_data = true
python_requires = != 3.0.*, != 3.1.*, != 3.2.*
packages = terraformvspherevm
test_suite = tests
setup_requires =
    setuptools
    nose
    coverage

install_requires =
	terrascript
    python_terraform

tests_require =
   pytest

[tool:pytest]
addopts = --verbose
python_files = testing/*/*.py

[bdist_wheel]
universal = false

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions
    
[pep8]
max-line-length = 99
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
